# Password_Tool

./: CMakeLists.txt  LICENSE  README.md  main.cpp  password_manager.cpp  password_manager.h  settings.cpp  settings.h
